2006-06-13  Steve Frécinaux  <steve@istique.net>

	* bindings/python/Makefile.am: make sure gedit-enum-types.h is generated
	before the bindings are built.

	* gedit/Makefile.am: fix generation of gedit-enum-types.h in $builddir
	instead of $srcdir.

2006-06-13  Steve Frécinaux  <steve@istique.net>

	* gedit/gedit-tab.c:
	* gedit/gedit-window.c:

	Update property definitions to use the new enum GTypes.

	* bindings/python/gedit.defs: 
	* bindings/python/gedit.override:
	
	Update enum types to actually use the new GTypes. Add bindings for
	several new methods (GeditDocument.get_enable_search_highlighting,
	GeditDocument.get_enable_search_highlighting, GeditWindow.close_tabs,
	GeditWindow.get_tab_from_uri and GeditApp.get_lockdown)
	
=== gedit 2.15.3 ===

2006-06-12  Steve Frécinaux  <steve@istique.net>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.15.3 released.

	* gedit/Makefile.am: fixed gedit-enum-types.[ch] generation.

2006-06-11  Elijah Newren  <newren gmail com>

	* bindings/python/Makefile.am: Add $PYTHON_LOC_LIB to ensure
	python library gets found.  #344539

2006-06-11  Steve Frécinaux  <steve@istique.net>

	Fix for bug #165568 – Support global lockdown keys (first part)

	* gedit/gedit-app.[ch]: define GeditLockdownMask as a flag type, add a 
	'lockdown' property to GeditApp, of type GeditLockdownMask, and define
	its getter/setter.
	
	* gedit/gedit-prefs-manager.[ch]: define a new helper function
	gedit_prefs_manager_get_lockdown.
	
	* gedit/gedit-prefs-manager-app.c: Listen to lockdown GConf folder
	changes. Update GeditApp's lockdown properties when a lockdown key is
	changed.
	
	* gedit/gedit-enum-types.h.template:
	* gedit/gedit-enum-types.c.template:
	* gedit/Makefile.am:
	
	Autogenerate type definitions for exported enums using glib-mkenums.

	* configure.ac: add GLIB_MKENUMS definition.

2006-06-03  Steve Frécinaux  <steve@istique.net>

	* bindings/python/geditutils.override: override menu_position_* to