@@ -787,8 +787,8 @@ build_tab_label (GeditNotebook *nb,
 	GtkWidget *hbox, *label_hbox, *label_ebox;
 	GtkWidget *label, *dummy_label;
 	GtkWidget *close_button;
-	GtkSettings *settings;
-	gint w, h;
+	GtkRcStyle *rcstyle;
+	GtkRequisition size;
 	GtkWidget *image;
 	GtkWidget *spinner;
 	GtkWidget *icon;
@@ -809,13 +809,17 @@ build_tab_label (GeditNotebook *nb,
 	/* don't allow focus on the close button */
 	gtk_button_set_focus_on_click (GTK_BUTTON (close_button), FALSE);
 
-	/* fetch the size of an icon */
-	settings = gtk_widget_get_settings (GTK_WIDGET (tab));
-	gtk_icon_size_lookup_for_settings (settings,
-					   GTK_ICON_SIZE_MENU,
-					   &w, &h);
-	image = gtk_image_new_from_stock (GTK_STOCK_CLOSE, GTK_ICON_SIZE_MENU);
-	gtk_widget_set_size_request (close_button, w + 2, h + 2);
+	/* make it as small as possible */
+	rcstyle = gtk_rc_style_new ();
+	rcstyle->xthickness = rcstyle->ythickness = 0;
+	gtk_widget_modify_style (close_button, rcstyle);
+	gtk_rc_style_unref (rcstyle),
+
+	image = gtk_image_new_from_stock (GTK_STOCK_CLOSE,
+					  GTK_ICON_SIZE_MENU);
+	gtk_widget_size_request (image, &size);
+	gtk_widget_set_size_request (close_button, size.width, size.height);
+
 	gtk_container_add (GTK_CONTAINER (close_button), image);
 	gtk_box_pack_start (GTK_BOX (hbox), close_button, FALSE, FALSE, 0);
 
