@@ -1,3 +1,10 @@
+2006-06-13  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit/gedit-panel.c: (create_small_button):
+	* gedit/gedit-notebook.c: (build_tab_label):
+
+	Fix bug #318461 – tab and panel close buttons are cropped.
+
 2006-06-13  Steve Frécinaux  <steve@istique.net>
 
 	* bindings/python/Makefile.am: make sure gedit-enum-types.h is generated
